# platform.core.account.account-common

./: CMakeLists.txt
common/: CMakeLists.txt  account-common.pc.in  account_mgr.xml
common/include/: account-private.h  account_crypto_service.h  account_db_helper.h  account_err.h  account_free.h  account_ipc_marshal.h  account_key_handler.h  dbg.h
common/src/: account_crypto_service.c  account_db_helper.c  account_err.h  account_free.c  account_ipc_marshal.c  account_key_handler.c
packaging/: account-common.spec
